Add due date offset config option to monthly chores

--- a/custom_components/chore_helper/translations/en.json
+++ b/custom_components/chore_helper/translations/en.json
@@ -29,6 +29,7 @@
                     "first_week": "First due week (1-52)",
                     "start_date": "Start date",
                     "day_of_month": "Day of month",
+                    "due_date_offset": "Offset each due date",
                     "weekday_order_number": "Order of the weekday in the month (e.g. first Wednesday of the month)",
                     "force_week_order_numbers": "Order of week in a month instead of order of weekday (e.g. on Wednesday of the first week)",
                     "date_format": "Date format (see http://strftime.org/)"
@@ -81,6 +82,7 @@
                     "first_week": "First due week (1-52)",
                     "start_date": "Start date",
                     "day_of_month": "Day of month",
+                    "due_date_offset": "Offset each due date",
                     "weekday_order_number": "Order of the weekday in the month (e.g. first Wednesday of the month)",
                     "force_week_order_numbers": "Order of week in a month instead of order of weekday (e.g. on Wednesday of the first week)",
                     "date_format": "Date format (see http://strftime.org/)"
