--- a/custom_components/chore_helper/translations/en.json
+++ b/custom_components/chore_helper/translations/en.json
@@ -13,7 +13,8 @@
                     "icon_tomorrow": "Icon due tomorrow (mdi:bell-outline) - optional",
                     "icon_today": "Icon due today (mdi:bell) - optional",
                     "icon_overdue": "Icon overdue (mdi:bell-alert) - optional",
-                    "forecast_dates": "Number of future due dates to forecast"
+                    "forecast_dates": "Number of future due dates to forecast",
+                    "show_overdue_today": "Show overdue chore today on calendar"
                 }
             },
             "detail": {
@@ -66,7 +67,8 @@
                     "icon_tomorrow": "Icon due tomorrow (mdi:bell-outline) - optional",
                     "icon_today": "Icon due today (mdi:bell) - optional",
                     "icon_overdue": "Icon overdue (mdi:bell-alert) - optional",
-                    "forecast_dates": "Number of future due dates to forecast"
+                    "forecast_dates": "Number of future due dates to forecast",
+                    "show_overdue_today": "Show overdue chore today on calendar"
                 }
             },
             "detail": {
